[gd_scene load_steps=19 format=3 uid="uid://ummqddlik17r"]

[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="1_lm4ab"]
[ext_resource type="Texture2D" uid="uid://bwmqf17eymmwg" path="res://assets/art/environments/bakgrunner/bakgrunn_meny/bakgrunn_startskjerm_placeholder.png" id="2_rrtjx"]
[ext_resource type="Theme" uid="uid://dhcc0oot5rr60" path="res://materials/menu_theme.tres" id="3_ey2nd"]
[ext_resource type="PackedScene" uid="uid://drqj2o3vl45tr" path="res://scenes/menus/raskeladden_sportsmate_weblink.tscn" id="3_gd6eg"]
[ext_resource type="FontFile" uid="uid://ddv1wxtia5j5c" path="res://assets/fonts/AR_One_Sans/static/AROneSans-Regular.ttf" id="4_85gay"]
[ext_resource type="Texture2D" uid="uid://dbatik1ijo73r" path="res://assets/art/ui/Ekstra/ui-hovedmeny-stolpe-tekstur.png" id="5_m7akf"]
[ext_resource type="PackedScene" uid="uid://bn5k8a1ow815y" path="res://scenes/menus/weblinks.tscn" id="6_1aft4"]
[ext_resource type="Texture2D" uid="uid://elfehputdtwg" path="res://assets/art/ui/ui_knapp_skilt_tekstur10.png" id="7_iq20y"]
[ext_resource type="Texture2D" uid="uid://c40c05yi44616" path="res://assets/art/ui/Ekstra/ui_detalj_spiker_tekstur01.png" id="9_bgneo"]
[ext_resource type="PackedScene" uid="uid://ccw8nj7luquqr" path="res://scenes/save_manager.tscn" id="10_eb4md"]
[ext_resource type="Texture2D" uid="uid://dvkvy4il5lq12" path="res://assets/art/ui/Ekstra/ui_detalj_spiker_tekstur02.png" id="10_uc2nr"]
[ext_resource type="PackedScene" uid="uid://djnq1inpljinj" path="res://scenes/levels/level_data.tscn" id="11_1coro"]
[ext_resource type="Texture2D" uid="uid://do2nvkqip3fl8" path="res://assets/art/ui/ui_knapp_skilt_tekstur02.png" id="11_dtp7j"]
[ext_resource type="Texture2D" uid="uid://dt07rpwl5nwe8" path="res://assets/art/ui/ui_knapp_skilt_tekstur06.png" id="12_jx6bc"]
[ext_resource type="PackedScene" uid="uid://bxvbcus4651uf" path="res://scenes/menus/level_select_menu.tscn" id="12_nuqcy"]
[ext_resource type="PackedScene" uid="uid://cpos7lg6meg4m" path="res://scenes/menus/settings_menu.tscn" id="13_0n7do"]
[ext_resource type="Texture2D" uid="uid://bi4pdkcsnm0om" path="res://assets/art/ui/ui_knapp_skilt_tekstur07.png" id="13_4irx7"]
[ext_resource type="PackedScene" uid="uid://bgkfbxvfcxyg8" path="res://scenes/menus/credits_menu.tscn" id="14_yauok"]

[node name="Menu" type="Node"]
process_mode = 3
script = ExtResource("1_lm4ab")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1600.0
offset_bottom = 720.0
texture = ExtResource("2_rrtjx")

[node name="RaskeladdenSportsmate" parent="." instance=ExtResource("3_gd6eg")]
scale = Vector2(0.776032, 0.776032)

[node name="StartButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 503.0
offset_top = 57.0
offset_right = 1194.0
offset_bottom = 249.0
rotation = -0.0875754
theme = ExtResource("3_ey2nd")
action_mode = 0

[node name="SettingsButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 426.0
offset_top = 256.0
offset_right = 1060.0
offset_bottom = 404.0
rotation = -0.0841475
theme = ExtResource("3_ey2nd")
action_mode = 0

[node name="CreditsButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 406.0
offset_top = 406.0
offset_right = 1069.0
offset_bottom = 564.0
rotation = -0.0804404
theme = ExtResource("3_ey2nd")
action_mode = 0

[node name="QuitButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 315.0
offset_top = 632.0
offset_right = 1003.0
offset_bottom = 750.0
rotation = -0.169792
theme = ExtResource("3_ey2nd")
action_mode = 0

[node name="stolpe" type="TextureRect" parent="."]
process_mode = 4
z_as_relative = false
offset_left = 414.0
offset_top = -84.0
offset_right = 1438.0
offset_bottom = 940.0
scale = Vector2(0.662578, 0.862366)
mouse_filter = 2
texture = ExtResource("5_m7akf")
stretch_mode = 3

[node name="Weblinks" parent="." instance=ExtResource("6_1aft4")]
position = Vector2(1103, 254)
rotation = -0.0275085
scale = Vector2(0.483685, 0.483685)

[node name="StartSign" type="TextureRect" parent="."]
offset_left = 482.0
offset_top = -240.0
offset_right = 1506.0
offset_bottom = 784.0
rotation = -0.0698132
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("7_iq20y")

[node name="Label" type="Label" parent="StartSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -61.0
offset_right = 123.0
offset_bottom = 75.0001
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0277328
theme = ExtResource("3_ey2nd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_85gay")
theme_override_font_sizes/font_size = 100
text = "Start"

[node name="Nail" type="TextureRect" parent="StartSign"]
layout_mode = 0
offset_left = 305.14
offset_top = 453.056
offset_right = 369.14
offset_bottom = 517.056
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("9_bgneo")

[node name="Nail2" type="TextureRect" parent="StartSign"]
layout_mode = 0
offset_left = 304.563
offset_top = 575.982
offset_right = 368.563
offset_bottom = 639.982
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("10_uc2nr")

[node name="SettingsSign" type="TextureRect" parent="."]
offset_left = 356.0
offset_top = -50.0
offset_right = 1380.0
offset_bottom = 974.0
rotation = -0.0698132
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("11_dtp7j")

[node name="Label" type="Label" parent="SettingsSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.396
offset_top = -68.2361
offset_right = 243.604
offset_bottom = 67.764
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0277328
theme = ExtResource("3_ey2nd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_85gay")
theme_override_font_sizes/font_size = 100
text = "Innstillinger"

[node name="Nail" type="TextureRect" parent="SettingsSign"]
layout_mode = 0
offset_left = 474.498
offset_top = 439.503
offset_right = 538.498
offset_bottom = 503.503
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("9_bgneo")

[node name="Nail2" type="TextureRect" parent="SettingsSign"]
layout_mode = 0
offset_left = 468.201
offset_top = 548.663
offset_right = 532.201
offset_bottom = 612.663
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("10_uc2nr")

[node name="CreditsSign" type="TextureRect" parent="."]
offset_left = 336.0
offset_top = 109.0
offset_right = 1360.0
offset_bottom = 1133.0
rotation = -0.0698132
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("12_jx6bc")

[node name="Label" type="Label" parent="CreditsSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -61.0
offset_right = 123.0
offset_bottom = 75.0001
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0277328
theme = ExtResource("3_ey2nd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_85gay")
theme_override_font_sizes/font_size = 100
text = "Kreditering"

[node name="Nail" type="TextureRect" parent="CreditsSign"]
layout_mode = 0
offset_left = 501.192
offset_top = 440.033
offset_right = 565.192
offset_bottom = 504.033
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("9_bgneo")

[node name="Nail2" type="TextureRect" parent="CreditsSign"]
layout_mode = 0
offset_left = 500.216
offset_top = 549.565
offset_right = 564.216
offset_bottom = 613.565
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("10_uc2nr")
flip_h = true

[node name="QuitSign" type="TextureRect" parent="."]
offset_left = 216.0
offset_top = 321.0
offset_right = 1240.0
offset_bottom = 1345.0
rotation = -0.182469
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("13_4irx7")
flip_h = true

[node name="Label" type="Label" parent="QuitSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -61.0
offset_right = 123.0
offset_bottom = 75.0001
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0277328
theme = ExtResource("3_ey2nd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_85gay")
theme_override_font_sizes/font_size = 100
text = "Avslutt"

[node name="Nail" type="TextureRect" parent="QuitSign"]
layout_mode = 0
offset_left = 636.83
offset_top = 457.825
offset_right = 700.83
offset_bottom = 521.825
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("10_uc2nr")

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -670.0
offset_top = -76.0
offset_right = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Error: fant ikke versjon"
horizontal_alignment = 2
vertical_alignment = 2

[node name="GameStateManager" parent="." instance=ExtResource("10_eb4md")]

[node name="LevelData" parent="." instance=ExtResource("11_1coro")]

[node name="LevelSelect" parent="." instance=ExtResource("12_nuqcy")]
visible = false

[node name="Settings" parent="." instance=ExtResource("13_0n7do")]
visible = false

[node name="Credits" parent="." instance=ExtResource("14_yauok")]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
